[gd_scene load_steps=9 format=3 uid="uid://b57fcx5wnkjjp"]

[ext_resource type="PackedScene" uid="uid://bt534pqa6bbnk" path="res://field/field.tscn" id="1_pyuv2"]
[ext_resource type="PackedScene" uid="uid://c4uc05bacefnv" path="res://ui/speed/speed.tscn" id="2_hvdpy"]
[ext_resource type="Script" path="res://ui/speed/speed.gd" id="3_g1iyi"]
[ext_resource type="PackedScene" uid="uid://di74jdc7bcgvs" path="res://ui/pause/pause.tscn" id="4_33s14"]
[ext_resource type="PackedScene" uid="uid://bsncbn0rrt55v" path="res://ui/restart/restart.tscn" id="5_6tsnc"]
[ext_resource type="Script" path="res://ui/tab_container.gd" id="6_d86jy"]
[ext_resource type="PackedScene" uid="uid://sun71qj2svtq" path="res://ui/field/field.tscn" id="7_fuiho"]
[ext_resource type="Script" path="res://ui/tabs.gd" id="8_opmk5"]

[node name="Main" type="Node"]

[node name="World" type="Node2D" parent="."]

[node name="Field" parent="World" instance=ExtResource("1_pyuv2")]

[node name="Camera2D" type="Camera2D" parent="World"]

[node name="GUI" type="CanvasLayer" parent="."]
process_mode = 3

[node name="Parameters" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/Parameters"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="TabContainer" type="TabContainer" parent="GUI/Parameters/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("6_d86jy")

[node name="Spawner" type="VBoxContainer" parent="GUI/Parameters/VBoxContainer/TabContainer"]
layout_mode = 2

[node name="On Start" parent="GUI/Parameters/VBoxContainer/TabContainer/Spawner" instance=ExtResource("7_fuiho")]
layout_mode = 2
field_name = "On Start"
start = 10.0

[node name="SpawnRate" parent="GUI/Parameters/VBoxContainer/TabContainer/Spawner" instance=ExtResource("7_fuiho")]
layout_mode = 2
field_name = "Spawn Rate"
start = 10.0

[node name="Energy" type="VBoxContainer" parent="GUI/Parameters/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2

[node name="OnStart" parent="GUI/Parameters/VBoxContainer/TabContainer/Energy" instance=ExtResource("7_fuiho")]
layout_mode = 2
field_name = "On Start"
start = 400.0

[node name="LowerBound" parent="GUI/Parameters/VBoxContainer/TabContainer/Energy" instance=ExtResource("7_fuiho")]
layout_mode = 2
field_name = "Lower Bound"
start = 800.0

[node name="OnDivision" parent="GUI/Parameters/VBoxContainer/TabContainer/Energy" instance=ExtResource("7_fuiho")]
layout_mode = 2
field_name = "On Division"
start = 350.0

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Parameters/VBoxContainer"]
layout_mode = 2

[node name="Left" type="Control" parent="GUI/Parameters/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BottomContainer" type="MarginContainer" parent="GUI/Parameters/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/Parameters/VBoxContainer/HBoxContainer/BottomContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Restart" parent="GUI/Parameters/VBoxContainer/HBoxContainer/BottomContainer/HBoxContainer" node_paths=PackedStringArray("parent", "node") instance=ExtResource("5_6tsnc")]
layout_mode = 2
scene = ExtResource("1_pyuv2")
parent = NodePath("../../../../../../../World")
node = NodePath("../../../../../../../World/Field")

[node name="Pause" parent="GUI/Parameters/VBoxContainer/HBoxContainer/BottomContainer/HBoxContainer" instance=ExtResource("4_33s14")]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="Speed" parent="GUI/Parameters/VBoxContainer/HBoxContainer/BottomContainer/HBoxContainer" instance=ExtResource("2_hvdpy")]
layout_mode = 2
script = ExtResource("3_g1iyi")

[node name="VSeparator" type="VSeparator" parent="GUI/Parameters/VBoxContainer/HBoxContainer/BottomContainer/HBoxContainer"]
layout_mode = 2

[node name="Tabs" type="Button" parent="GUI/Parameters/VBoxContainer/HBoxContainer/BottomContainer/HBoxContainer" node_paths=PackedStringArray("tabs")]
layout_mode = 2
text = "Tabs"
script = ExtResource("8_opmk5")
tabs = NodePath("../../../../TabContainer")

[node name="Right" type="Control" parent="GUI/Parameters/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="field_changed" from="GUI/Parameters/VBoxContainer/TabContainer/Spawner/On Start" to="GUI/Parameters/VBoxContainer/TabContainer" method="_on_spawner_on_start_field_changed"]
[connection signal="field_changed" from="GUI/Parameters/VBoxContainer/TabContainer/Spawner/SpawnRate" to="GUI/Parameters/VBoxContainer/TabContainer" method="_on_spawn_rate_field_changed"]
[connection signal="field_changed" from="GUI/Parameters/VBoxContainer/TabContainer/Energy/OnStart" to="GUI/Parameters/VBoxContainer/TabContainer" method="_on_on_start_field_changed"]
[connection signal="field_changed" from="GUI/Parameters/VBoxContainer/TabContainer/Energy/LowerBound" to="GUI/Parameters/VBoxContainer/TabContainer" method="_on_lower_bound_field_changed"]
[connection signal="field_changed" from="GUI/Parameters/VBoxContainer/TabContainer/Energy/OnDivision" to="GUI/Parameters/VBoxContainer/TabContainer" method="_on_on_division_field_changed"]
[connection signal="value_changed" from="GUI/Parameters/VBoxContainer/HBoxContainer/BottomContainer/HBoxContainer/Speed" to="GUI/Parameters/VBoxContainer/HBoxContainer/BottomContainer/HBoxContainer/Speed" method="_on_value_changed"]
[connection signal="pressed" from="GUI/Parameters/VBoxContainer/HBoxContainer/BottomContainer/HBoxContainer/Tabs" to="GUI/Parameters/VBoxContainer/HBoxContainer/BottomContainer/HBoxContainer/Tabs" method="_on_pressed"]
